<resources>
    <string name="app_name">Elfec Cortes Programados</string>

    <!-- Login -->
    <string name="title_login">Ingreso al sistema</string>
    <string name="btn_login">Ingresar</string>
    <string name="hint_username">Usuario de empresa</string>
    <string name="error_username_empty">El usuario de empresa no puede estar vacío</string>
    <string name="hint_reg_token">Token de registro</string>
    <string name="error_reg_token_empty">El token de registro no puede estar vacío</string>
    <string name="msg_login_user">Validando información de usuario empresarial&#8230;</string>

    <!-- Outages -->
    <string name="outage_date_format">EEEE, dd \'de\' MMMM, yyyy</string>
    <string name="lbl_time_range">De %1$s a %2$s</string>
    <string name="outage_time_format">HH:mm</string>
    <string name="lbl_loading_outages">Cargando cortes programados&#8230;</string>
    <string name="lbl_loading_more_outages">Cargando más cortes programados&#8230;</string>
    <string name="msg_no_outages">Actualmente no hay ningún corte programado para mostrar</string>

    <!-- PowerPoles -->
    <string name="pole_description_format"><![CDATA[Poste de <b>%1$s %2$s</b>]]></string>
    <string name="pole_condition_format"><![CDATA[Estado: <b>%1$s</b>]]></string>
    <string name="pole_owner_format"><![CDATA[Propietario: <b>%1$s</b>]]></string>
    <string name="pole_supports_format"><![CDATA[Apoyos: <b>%1$s</b>]]></string>
    <string name="msg_no_power_poles">El corte programado no tiene postes afectados</string>

    <!-- Buttons -->
    <string name="btn_ok">Aceptar</string>
    <string name="title_activity_power_poles">Postes de Corte</string>
</resources>
