<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/layout_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="@dimen/btn_top_margin"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/user"
            android:maxLength="20"
            android:hint="@string/hint_username"/>

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:drawableLeft="@drawable/token"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/token"
            android:maxLength="20"
            android:hint="@string/hint_reg_token"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_top_margin"
            android:text="@string/btn_login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.pnikosis.materialishprogress.ProgressWheel
            android:layout_width="@dimen/login_progress_size"
            android:layout_height="@dimen/login_progress_size"
            app:matProg_barColor="@color/colorPrimary"
            app:matProg_progressIndeterminate="true"/>

        <TextView
            android:id="@+id/txt_waiting_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Montserrat.Headline"
            android:textColor="@android:color/white"
            tools:text="@string/msg_login_user"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_top_margin"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Montserrat.Light"
            android:textColor="@color/txtErrorColor"
            android:textSize="@dimen/txt_error_size"/>

        <Button
            android:id="@+id/btn_clear_errors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/btn_ok"/>
    </LinearLayout>
</LinearLayout>
